base/common/netpol-dns.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-cassandra
spec:
  podSelector:
    matchLabels:
      app: apigee-cassandra
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system          
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-runtime
spec:
  podSelector:
    matchLabels:
      app: apigee-runtime
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system    
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-mart
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system    
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-metrics
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-udca
spec:
  podSelector:
    matchLabels:
      app: apigee-udca
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-sync
spec:
  podSelector:
    matchLabels:
      app: apigee-synchronizer
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-connect
spec:
  podSelector:
    matchLabels:
      app: apigee-connect-agent
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
    - ipBlock:
        cidr: 8.8.8.8/32
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53      
  policyTypes:
  - Egress
