base/common/netpol-ingress.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# allow ingress to MART only from apigee-mart-istio-ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mart-ingress
spec:
  podSelector:
    matchLabels:
      app: apigee-mart
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: istio-system
    - podSelector:
        matchLabels:
          app: apigee-mart-istio-ingressgateway
    ports:
    - protocol: TCP
      port: 8843
---
# this policy will allow any egress traffic, ingress only from istio ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runtime-ingress
spec:
  podSelector:
    matchLabels:
      app: apigee-runtime
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: istio-system
    - podSelector:
        matchLabels:
          app: istio-ingressgateway
    ports:
    - protocol: TCP
      port: 8443
  egress:
  - {}
