base/common/netpol-monitoring.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-cassandra
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-cassandra
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-udca
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-udca
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-connect
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-connect-agent
      ports:
      - protocol: TCP
        port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-runtime
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-runtime
      ports:
      - protocol: TCP
        port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-mart
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-mart
      ports:
      - protocol: TCP
        port: 8843
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-sync
spec:
  podSelector:
    matchLabels:
      app: apigee-metrics
  policyTypes:
    - Egress
    - Ingress
  ingress:
  - {}    
  egress:
    - to: 
      - namespaceSelector:
          matchLabels:
            app: apigee
      - podSelector:
          matchLabels:
            app: apigee-synchronizer
      ports:
      - protocol: TCP
        port: 8843
